--- a/FishNet/Plugins/FishyFacepunch/CHANGELOG.txt
+++ b/FishNet/Plugins/FishyFacepunch/CHANGELOG.txt
@@ -1,3 +1,6 @@
+2.1.1
+	- Added deinitializer to FishyFacepunch.
+
 2.1.0
 	- Fixed ClientId 32767 not found error when being used with Multipass.
 
